--- a/peer2peer/.gitignore
+++ b/peer2peer/.gitignore
@@ -27,3 +27,14 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+*.jpg.part0
+*.jpg.part1
+*.jpg.part2
+*.jpg.part3
+*.jpg.part4
+*.jpg.part5
+*.jpg.part6
+*.jpg.part7
+*.jpg.part8
+*.jpg.part9
